# spotikill

./: Cargo.toml  README.md  build.rs  tray-props.rc
resources/: Info.plist  app-icon.icns
spk-installer/: Cargo.toml
src/: aumid.rs  constants.rs  lib.rs  main.rs
