[package]
name = "spotikill"
authors = ["Hunter Davenport <dablenparty>"]
description = "A simple tray app to kill Spotify processes."
license = "MIT"
version = "0.1.4"
edition = "2021"
default-run = "spotikill"

[[bin]]
name = "spotikill"

[[bin]]
name = "installer"
required-features = ["installer"]

[features]
installer = ["directories", "uuid", "windows"]

[profile.release]
debug = false
lto = true
opt-level = "s"

[dependencies]
anyhow = "1.0"
const_format = "0.2"
directories = { version = "5.0", optional = true }
notify-rust = "4"
sysinfo = "0.30"
tray-item = "0.9"
uuid = { version = "1.6.1", features = [
    "v4",
    "macro-diagnostics",
], optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52.0", features = ["Win32"], optional = true }

[target.'cfg(windows)'.build-dependencies]
windres = "0.2.2"
