[package]
name = "spotikill"
authors = ["Hunter Davenport <dablenparty>"]
description = "A simple tray app to kill Spotify processes."
license = "MIT"
version = "0.3.0"
edition = "2021"
default-run = "spotikill"
readme = "README.md"

[[bin]]
name = "spotikill"

[[bin]]
name = "installer"
required-features = ["installer"]

[features]
installer = ["directories", "uuid", "which", "windows"]

[profile.release]
debug = false
lto = true
opt-level = "s"

[dependencies]
anyhow = "1.0"
const_format = "0.2"
directories = { version = "5.0", optional = true }
image = "0.24"
notify-rust = "4"
once_cell = "1.19"
regex = "1.10"
sysinfo = "0.30"
tao = "0.25"
tray-icon = "0.11"
uuid = { version = "1.6", features = [
    "v4",
    "macro-diagnostics",
], optional = true }
which = { version = "6.0", optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "implement",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Variant",
    "Win32_Storage_EnhancedStorage",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Com_StructuredStorage",
], optional = true }

[target.'cfg(windows)'.build-dependencies]
windres = "0.2.2"
